@@ -1,3 +1,8 @@
+2020-07-24 Sebastian 'basxto' Riedel <sdcc@basxto.de>
+
+	* sdas/linksrc/lkout.c:
+	  Fix address translation bug found by toxa.
+
 2020-07-23 Sebastian 'basxto' Riedel <sdcc@basxto.de>
 
 	* support/makebin/makebin.c:
